<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/light_green_army"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.authorization.register.RegisterActivity">

    <LinearLayout
        android:windowSoftInputMode="adjustResize"
        android:id="@+id/content_container"
        android:paddingBottom="30dp"
        android:background="@drawable/bg_rounded_dark_green_army"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_register_description"
            android:layout_marginHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_description"
            android:textSize="12sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            style="@style/text_title_auth"
            android:layout_marginTop="30dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameEditTextLayout"
            style="@style/edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:hint="@string/hint_name"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_email"
            style="@style/text_title_auth"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/edit_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:hint="@string/hint_email"
                android:textColorHint="@color/white"
                android:inputType="textEmailAddress"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_password"
            style="@style/text_title_auth"
            android:text="@string/password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordEditTextLayout"
            style="@style/edit_layout"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:hint="@string/hint_password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_confirm_password"
            style="@style/text_title_auth"
            android:text="@string/confirm_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_EditTextLayout"
            style="@style/edit_layout"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/white"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:hint="@string/hint_password"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.dicoding.chillicare.ui.customview.MyYellowButton
            android:id="@+id/btn_create_account"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:paddingVertical="15dp" />
    </LinearLayout>

</ScrollView>