<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/light_green_army"
    android:orientation="vertical"
    tools:context=".ui.authorization.WelcomeActivity">
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/logo_plant"
        android:src="@drawable/logo_1" />

    <LinearLayout
        android:layout_marginHorizontal="30dp"
        android:id="@+id/menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_dark_green_army"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <com.dicoding.chillicare.ui.customview.MyTransparentWhiteButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:padding="15dp"
            android:text="@string/sign_in" />

        <com.dicoding.chillicare.ui.customview.MyYellowButton
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="20dp"
            android:padding="15dp"
            android:text="@string/register" />

    </LinearLayout>



</LinearLayout>