<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green_army"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:elevation="30dp"
        app:cardCornerRadius="20dp" >

        <LinearLayout
            android:background="@color/dark_green_army"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/iv_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/ic_account_circle_white" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_name"
                android:textSize="20sp"
                android:textColor="@color/white_bg"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_email"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <com.dicoding.chillicare.ui.customview.MyRedButton
                android:id="@+id/btn_log_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp"
                android:text="@string/log_out"
                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>